@@ -4,14 +4,13 @@ import java.io.BufferedReader;
 import java.io.FileReader;
 import java.io.IOException;
 import java.util.*;
-import java.util.stream.Collectors;
 
 public class Star41 {
     public static void main(String[] args) {
         Map<String, List<String>> moves1;
         Map<String, List<String>> moves2;
 
-        String filePath = "AdventOfCode2024/src/day21/input.txt";
+        String filePath = "src/day21/input.txt";
 
         ArrayList<String> codes = new ArrayList<>();
         String[] keypad1 = {"789", "456", "123", "#0A"};
@@ -41,7 +40,7 @@ public class Star41 {
 
     public static Map<String, List<String>> parseMoves(String[] keypad) {
         Map<String, int[]> pos = getKeyPos(keypad);
-        List<String> keys = pos.keySet().stream().sorted().collect(Collectors.toList());
+        List<String> keys = pos.keySet().stream().sorted().toList();
 
         Map<String, List<String>> moves = new HashMap<>();
         for (String key1 : keys) {
